--- a/pom.xml
+++ b/pom.xml
@@ -90,7 +90,7 @@
 	    <repository>
 	      <id>nexus</id>
 	      <name>Mithun Technologies Releases Nexus Repository</name>
-	      <url>/http://13.126.55.188:8081/repository/ebay-snapshot/</url>
+	      <url>http://13.126.55.188:8081/repository/ebay-release/</url>
 	    </repository>
 	    <snapshotRepository>
 	      <id>nexus</id>
