--- a/pom.xml
+++ b/pom.xml
@@ -90,7 +90,7 @@
 	    <repository>
 	      <id>nexus</id>
 	      <name>Mithun Technologies Releases Nexus Repository</name>
-	      <url>http://http://13.233.216.28:8081/repository/maven-releases/</url>
+	      <url>http://13.233.216.28:8081/repository/maven-releases/</url>
 	    </repository>
 	    <snapshotRepository>
 	      <id>nexus</id>
